# onlyweb.dev

./: .codeclimate.yml  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .nowignore  .prettierrc  .stylelintignore  .stylelintrc.cjs  .yarnrc.yml  Brewfile  Brewfile.lock.json  Cargo.toml  LICENSE  README.md  SECURITY.md  api  app.vue  deno.json  eslint.config.js  head.js  index.html  jest.config.js  jsconfig.json  now.json  nuxt.config.js  only-web.code-workspace  package.json  pwa.js  tsconfig.json  vercel.json  vetur.config.cjs  vue.config.js  workbox-config.cjs
.github/: FUNDING.yml
.github/workflows/: code-quality.yml  codeql-analysis.yml  codeql.yml  development-checks.yml  development.yml  pr-checks.yml  test.yml
.tasks/: commit.sh  dev.sh  start.js  start.sh
api/: [...mainProxy].js  hello.ts  image.js  image.ts  index.js  index.ts
app/: constants.js  default.js  index.html  index.js  main.js
app/assets/: manifest.json
app/components/: reload.js
apps/nuxt/: dist  (+5 more)
components/: FrameTicker.vue  GameOfLife.vue  Map.vue
fragments/: reset.ts
framework/: README.md  bench.js
layouts/: default.vue
libraries/: cuid.ts
pages/: 3D.vue  3d.vue  chat.vue  geolocation.vue  index.vue  music.vue  push.vue  rust.vue  scanner.vue
pkg/: README.md  package.json  wasm_game_of_life.d.ts  wasm_game_of_life.js  wasm_game_of_life_bg.d.ts  wasm_game_of_life_bg.wasm
plugins/: chat.js  chords.js  head.js  mapbox.js  oruga.js
public/: index.html
scripts/: setup.sh
source/: index.html
src/: App.vue  lib.rs  main.js
static/: index.html  manifest.json
(+291 files in other folders)
