[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Daniel LaCosse <D@nielLaCos.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
opt-level = "z"
